Archive2/65/5e48f8d747fc19/output
main.cpp:24:12: error: 'operator const bool' does not name a type
   explicit operator bool const noexcept { return impl_;}
            ^
main.cpp: In member function 'T* OwnerPointer<T>::get() const':
main.cpp:19:39: error: expected ';' before '}' token
   T* get() const { return impl_.get() }
                                       ^
